--- a/dashboard/cheat-status.html
+++ b/dashboard/cheat-status.html
@@ -524,7 +524,7 @@ Cheat Status
                                 <div class="flex flex-col items-start w-full space-y-2 md:justify-between md:items-center md:space-y-0 md:flex-row">
                                     <div class="inline-flex items-center space-x-3">
                                         <div class="flex-shrink-0">
-                                            <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/430/229e4d2a-bb78-4d06-9c8d-5f7eec37e928.png" alt="Call of Duty: Black Ops Cold War's Icon">
+                                            <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/430/229e4d2a-bb78-4d06-9c8d-5f7eec37e928.png" alt="Call of Duty: Black Ops Cold War's Icon">
                                         </div>
                                         <div class="block sm:ml-4">
                                             <div class="text-sm font-semibold leading-5 text-neutral-100">
@@ -557,7 +557,7 @@ Never
                                 <div class="flex flex-col items-start w-full space-y-2 md:justify-between md:items-center md:space-y-0 md:flex-row">
                                     <div class="inline-flex items-center space-x-3">
                                         <div class="flex-shrink-0">
-                                            <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/514/ec487906-2e83-4cd4-b86b-cb39b28cceb2.png" alt="Call of Duty: Modern Warfare's Icon">
+                                            <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/514/ec487906-2e83-4cd4-b86b-cb39b28cceb2.png" alt="Call of Duty: Modern Warfare's Icon">
                                         </div>
                                         <div class="block sm:ml-4">
                                             <div class="text-sm font-semibold leading-5 text-neutral-100">
@@ -590,7 +590,7 @@ Never
                                 <div class="flex flex-col items-start w-full space-y-2 md:justify-between md:items-center md:space-y-0 md:flex-row">
                                     <div class="inline-flex items-center space-x-3">
                                         <div class="flex-shrink-0">
-                                            <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/699/f7b72121-a2ff-4416-ba28-34fe883a1a2b.png" alt="Call of Duty: MWII's Icon">
+                                            <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/699/f7b72121-a2ff-4416-ba28-34fe883a1a2b.png" alt="Call of Duty: MWII's Icon">
                                         </div>
                                         <div class="block sm:ml-4">
                                             <div class="text-sm font-semibold leading-5 text-neutral-100">
@@ -623,7 +623,7 @@ Jul 28, 2023
                                 <div class="flex flex-col items-start w-full space-y-2 md:justify-between md:items-center md:space-y-0 md:flex-row">
                                     <div class="inline-flex items-center space-x-3">
                                         <div class="flex-shrink-0">
-                                            <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/586/c518d00b-56dc-4f26-aee4-be0831ca3581.png" alt="Call of Duty: MWIII's Icon">
+                                            <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/586/c518d00b-56dc-4f26-aee4-be0831ca3581.png" alt="Call of Duty: MWIII's Icon">
                                         </div>
                                         <div class="block sm:ml-4">
                                             <div class="text-sm font-semibold leading-5 text-neutral-100">
@@ -656,7 +656,7 @@ Never
                                 <div class="flex flex-col items-start w-full space-y-2 md:justify-between md:items-center md:space-y-0 md:flex-row">
                                     <div class="inline-flex items-center space-x-3">
                                         <div class="flex-shrink-0">
-                                            <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/401/4e1ed577-c3ac-4091-9f4f-86cc50107dbd.png" alt="Call of Duty: Vanguard's Icon">
+                                            <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/401/4e1ed577-c3ac-4091-9f4f-86cc50107dbd.png" alt="Call of Duty: Vanguard's Icon">
                                         </div>
                                         <div class="block sm:ml-4">
                                             <div class="text-sm font-semibold leading-5 text-neutral-100">
@@ -689,7 +689,7 @@ Never
                                 <div class="flex flex-col items-start w-full space-y-2 md:justify-between md:items-center md:space-y-0 md:flex-row">
                                     <div class="inline-flex items-center space-x-3">
                                         <div class="flex-shrink-0">
-                                            <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/537/f7a99a82-5861-4ea0-b0ba-a52f7bf05ef8.png" alt="Counter-Strike 2's Icon">
+                                            <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/537/f7a99a82-5861-4ea0-b0ba-a52f7bf05ef8.png" alt="Counter-Strike 2's Icon">
                                         </div>
                                         <div class="block sm:ml-4">
                                             <div class="text-sm font-semibold leading-5 text-neutral-100">
@@ -722,7 +722,7 @@ Never
                                 <div class="flex flex-col items-start w-full space-y-2 md:justify-between md:items-center md:space-y-0 md:flex-row">
                                     <div class="inline-flex items-center space-x-3">
                                         <div class="flex-shrink-0">
-                                            <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/165/52a3d90a-e61e-4887-8521-e76d94a3d2e3.jpg" alt="Counter-Strike: Source's Icon">
+                                            <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/165/52a3d90a-e61e-4887-8521-e76d94a3d2e3.jpg" alt="Counter-Strike: Source's Icon">
                                         </div>
                                         <div class="block sm:ml-4">
                                             <div class="text-sm font-semibold leading-5 text-neutral-100">
@@ -755,7 +755,7 @@ Never
                                 <div class="flex flex-col items-start w-full space-y-2 md:justify-between md:items-center md:space-y-0 md:flex-row">
                                     <div class="inline-flex items-center space-x-3">
                                         <div class="flex-shrink-0">
-                                            <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/555/4d899979-49d1-47f4-91f3-78cd35040afb.png" alt="Privacy Tool's Icon">
+                                            <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/555/4d899979-49d1-47f4-91f3-78cd35040afb.png" alt="Privacy Tool's Icon">
                                         </div>
                                         <div class="block sm:ml-4">
                                             <div class="text-sm font-semibold leading-5 text-neutral-100">
@@ -788,7 +788,7 @@ Never
                                 <div class="flex flex-col items-start w-full space-y-2 md:justify-between md:items-center md:space-y-0 md:flex-row">
                                     <div class="inline-flex items-center space-x-3">
                                         <div class="flex-shrink-0">
-                                            <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/342/3627563b-dc2a-4fd1-9cfc-cc06b54cd33a.png" alt="STAR WARS Battlefront II's Icon">
+                                            <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/342/3627563b-dc2a-4fd1-9cfc-cc06b54cd33a.png" alt="STAR WARS Battlefront II's Icon">
                                         </div>
                                         <div class="block sm:ml-4">
                                             <div class="text-sm font-semibold leading-5 text-neutral-100">
