--- a/dashboard/purchase-cheats.html
+++ b/dashboard/purchase-cheats.html
@@ -534,11 +534,11 @@ Purchase Cheats
                         </div>
                         <div class="space-y-4">
                             <ul class="overflow-hidden border divide-y rounded-md shadow bg-neutral-400 border-neutral-300 divide-neutral-300">
-                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/699/f7b72121-a2ff-4416-ba28-34fe883a1a2b.png" alt="Call of Duty: Modern Warfare II / DMZ's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/699/f7b72121-a2ff-4416-ba28-34fe883a1a2b.png" alt="Call of Duty: Modern Warfare II / DMZ's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -557,11 +557,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/514/ec487906-2e83-4cd4-b86b-cb39b28cceb2.png" alt="Call of Duty: Modern Warfare (2019)'s Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/514/ec487906-2e83-4cd4-b86b-cb39b28cceb2.png" alt="Call of Duty: Modern Warfare (2019)'s Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -580,11 +580,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/586/c518d00b-56dc-4f26-aee4-be0831ca3581.png" alt="Call of Duty: Modern Warfare III / Warzone's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/586/c518d00b-56dc-4f26-aee4-be0831ca3581.png" alt="Call of Duty: Modern Warfare III / Warzone's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -603,11 +603,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/430/229e4d2a-bb78-4d06-9c8d-5f7eec37e928.png" alt="Call of Duty: Black Ops Cold War's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/430/229e4d2a-bb78-4d06-9c8d-5f7eec37e928.png" alt="Call of Duty: Black Ops Cold War's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -626,11 +626,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/555/4d899979-49d1-47f4-91f3-78cd35040afb.png" alt="Privacy Tool's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/555/4d899979-49d1-47f4-91f3-78cd35040afb.png" alt="Privacy Tool's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -649,11 +649,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/537/f7a99a82-5861-4ea0-b0ba-a52f7bf05ef8.png" alt="Counter-Strike 2's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/537/f7a99a82-5861-4ea0-b0ba-a52f7bf05ef8.png" alt="Counter-Strike 2's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -672,11 +672,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/474/e427b262-ea02-4491-b9d3-27ac3de6a4ec.png" alt="Call of Duty - Complete Package's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/474/e427b262-ea02-4491-b9d3-27ac3de6a4ec.png" alt="Call of Duty - Complete Package's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -695,11 +695,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/401/4e1ed577-c3ac-4091-9f4f-86cc50107dbd.png" alt="Call of Duty: Vanguard's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/401/4e1ed577-c3ac-4091-9f4f-86cc50107dbd.png" alt="Call of Duty: Vanguard's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -718,11 +718,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/165/52a3d90a-e61e-4887-8521-e76d94a3d2e3.jpg" alt="Counter-Strike: Source's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/165/52a3d90a-e61e-4887-8521-e76d94a3d2e3.jpg" alt="Counter-Strike: Source's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -741,11 +741,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/342/3627563b-dc2a-4fd1-9cfc-cc06b54cd33a.png" alt="STAR WARS Battlefront II's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/342/3627563b-dc2a-4fd1-9cfc-cc06b54cd33a.png" alt="STAR WARS Battlefront II's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
@@ -764,11 +764,11 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a href="./purchase-cheats/call-of-duty-modern-warfare-ii-dmz.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
-                                                <img class="w-10 h-10 rounded-md shadow" src="https://interwebz-cheats.com/storage/626/bd23b312-d368-4db3-9a15-5def13ab415b.png" alt="The Ultimate Package's Icon">
+                                                <img class="w-10 h-10 rounded-md shadow" src="./styles/storage/626/bd23b312-d368-4db3-9a15-5def13ab415b.png" alt="The Ultimate Package's Icon">
                                             </div>
                                             <div class="block lg:ml-4">
                                                 <div class="flex flex-wrap items-center sm:space-x-3">
