--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -149,7 +149,7 @@
                             </li>
                             <li>
                                 <div class="p-navEl " data-has-children="true">
-                                    <a href="/community/tickets/" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfTickets">Tickets</a>
+                                    <a href="/tickets/tickets.html" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfTickets">Tickets</a>
                                     <a data-xf-key="5" data-xf-click="menu" data-menu-pos-ref="< .p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
                                     <div class="menu menu--structural" data-menu="menu" aria-hidden="true">
                                         <div class="menu-content">
