message box done

--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -194,7 +194,7 @@
 <span class="p-navgroup-linkText"></span>
 </a> -->
 <div class="dropdown" >
-    <button class="btn p-navgroup-link js-badge--conversations  dropdown-toggle" style="border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <button class="btn p-navgroup-link js-badge--conversations " style="border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         <i class="fa-regular fa-envelope icon-box " ></i>
     </button>
 
@@ -216,7 +216,7 @@
   </div>
 
                         <div class="dropdown" >
-                            <button class="btn p-navgroup-link js-badge--conversations  dropdown-toggle" style="border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="btn p-navgroup-link js-badge--conversations" style="border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa-regular fa-bell icon-box"></i>
                             </button>
                         
@@ -239,7 +239,7 @@
                           </div>
 
                     <div class="dropdown" >
-                        <button class="btn p-navgroup-link js-badge--conversations  dropdown-toggle" style="border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn p-navgroup-link js-badge--conversations" style="border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-magnifying-glass icon-box"></i>
                         </button>
                     
@@ -381,7 +381,7 @@ Post thread…
                                         <!-- <div class="block-gradient-container">
                                             <div class="block-gradient"></div>
                                         </div> -->
-                                        <a href="/community/#public-area.3" class="text-color underline">Public Area</a>
+                                        <a href="/error/error.html" class="text-color underline">Public Area</a>
                                     </h2>
                                     <div class="block-body">
                                         <div class="node node--id65 node--depth2 node--link">
