--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -265,7 +265,7 @@
                                         <div class="menu-footer" style="background-color: #483663;">
                                         <span class="menu-footer-controls">
                                         <button type="submit" class=" search--newIndicator" ><i class="fa-solid fa-magnifying-glass pe-1"></i>Search</button>
-                                        <a href="/community/search/" class="button dropdown-text-color advance-btn ad-btn">Advanced search…</a>
+                                        <a href="/Error/error.html" class="button dropdown-text-color advance-btn ad-btn">Advanced search…</a>
                                         </span>
                                         </div>
                                         <input type="hidden" name="_xfToken" value="1707830771,0918e9bf1d6c77b44d7110cb6562234f">
@@ -277,7 +277,7 @@
 <i aria-hidden="true"></i>
 <span class="p-navgroup-linkText">What's new</span>
 </a>
-                        <a href="/community/search/" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
+                        <a href="/Error/error.html" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
 <i aria-hidden="true"></i>
 <i class="fa-solid fa-magnifying-glass"></i>
 </a>
@@ -302,7 +302,7 @@
                                 <div class="menu-footer">
                                     <span class="menu-footer-controls">
 <button type="submit" class="button--primary button button--icon button--icon--search"><span class="button-text">Search</span></button>
-                                    <a href="/community/search/" class="button"><span class="button-text">Advanced search…</span></a>
+                                    <a href="/Error/error.html" class="button"><span class="button-text">Advanced search…</span></a>
                                     </span>
                                 </div>
                                 <input type="hidden" name="_xfToken" value="1706274979,b8640de3b33ff33c27848e4260499c28" />
