--- a/Tickets/tickets.html
+++ b/Tickets/tickets.html
@@ -236,7 +236,7 @@
                                                                 <div class="menu-footer" style="background-color: #483663;">
                                                                 <span class="menu-footer-controls">
                                                                 <button type="submit" class=" search--newIndicator" ><i class="fa-solid fa-magnifying-glass pe-1"></i>Search</button>
-                                                                <a href="/community/search/" class="button dropdown-text-color advance-btn ad-btn">Advanced search…</a>
+                                                                <a href="/Error/error.html" class="button dropdown-text-color advance-btn ad-btn">Advanced search…</a>
                                                                 </span>
                                                                 </div>
                                                                 <input type="hidden" name="_xfToken" value="1707830771,0918e9bf1d6c77b44d7110cb6562234f">
