--- a/community/news-feed.html
+++ b/community/news-feed.html
@@ -256,7 +256,7 @@
                                 <div class="menu-footer">
                                     <span class="menu-footer-controls">
         <button type="submit" class="button--primary button button--icon button--icon--search"><span class="button-text">Search</span></button>
-                                    <a href="/community/search/" class="button"><span class="button-text">Advanced search…</span></a>
+                                    <a href="/Error/error.html" class="button"><span class="button-text">Advanced search…</span></a>
                                     </span>
                                 </div>
                                 <input type="hidden" name="_xfToken" value="1706274979,b8640de3b33ff33c27848e4260499c28" />
