--- a/community/community.html
+++ b/community/community.html
@@ -344,11 +344,44 @@
 <i aria-hidden="true"></i>
 <span class="p-navgroup-linkText">What's new</span>
 </a>
-<a href="/community/search/" class="p-navgroup-link p-navgroup-link--iconic" data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
-<!-- <i aria-hidden="true"></i>
-<span class="p-navgroup-linkText">Search</span> -->
+<!-- <a href="/Error/error.html" class="p-navgroup-link p-navgroup-link--iconic" data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
+<span class="p-navgroup-linkText d-none">Search</span>
 <i class="bi bi-search"></i>
-</a>
+</a> -->
+<div class="dropdown" >
+	<button class="btn p-navgroup-link js-badge--conversations" style="border: none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+		<i class="fa-solid fa-magnifying-glass icon-box"></i>
+	</button>
+
+				<div class="dropdown-menu dropdown-search-menu" aria-labelledby="dropdownMenuButton" style="background-color: #362A51 ; border: 1px solid #6e5c8a" >
+		
+					<form action="/community/search/search" method="post" class="menu-content" data-xf-init="quick-search">
+					<h3 class="menu-header text-light"  style="background-color: #362A51 ; font-weight: 600; font-size: 13px; ">Search</h3>
+					<div class="menu-row" style="background-color: #483663;">
+					<input type="text" class="input advance-btn"  name="keywords" placeholder="Search…" aria-label="Search" data-menu-autofocus="true">
+					</div>
+					<div class="menu-row" style="background-color: #483663;">
+					<label class="iconic"><input type="checkbox" name="c[title_only]" value="1"><i aria-hidden="true"></i><span class="iconic-label dropdown-text-color">Search titles only
+					<span tabindex="0" role="button" data-xf-init="tooltip" data-trigger="hover focus click" data-original-title="Tags will also be searched" id="js-XFUniqueId1">
+					<i class="fa--xf far fa-question-circle u-muted u-smaller" aria-hidden="true"></i>
+					</span></span></label>
+					</div>
+					<div class="menu-row" style="background-color: #483663;">
+					<div class="inputGroup">
+					<span class="inputGroup-text dropdown-text-color" id="ctrl_search_menu_by_member">By:</span>
+					<input type="text" class="input advance-btn"  name="c[users]" data-xf-init="auto-complete" placeholder="Member" aria-labelledby="ctrl_search_menu_by_member" autocomplete="off">
+					</div>
+					</div>
+					<div class="menu-footer" style="background-color: #483663;">
+					<span class="menu-footer-controls">
+					<button type="submit" class=" search--newIndicator" ><i class="fa-solid fa-magnifying-glass pe-1"></i>Search</button>
+					<a href="/Error/error.html" class="button dropdown-text-color advance-btn ad-btn">Advanced search…</a>
+					</span>
+					</div>
+					<input type="hidden" name="_xfToken" value="1707830771,0918e9bf1d6c77b44d7110cb6562234f">
+					</form>
+					</div>
+  </div>
 <div class="menu menu--structural menu--wide" data-menu="menu" aria-hidden="true">
 <form action="/community/search/search" method="post" class="menu-content" data-xf-init="quick-search">
 <h3 class="menu-header">Search</h3>
@@ -370,7 +403,7 @@
 <div class="menu-footer">
 <span class="menu-footer-controls">
 <button type="submit" class="button--primary button button--icon button--icon--search"><span class="button-text">Search</span></button>
-<a href="/community/search/" class="button"><span class="button-text">Advanced search…</span></a>
+<a href="/Error/error.html" class="button"><span class="button-text">Advanced search…</span></a>
 </span>
 </div>
 <input type="hidden" name="_xfToken" value="1706288227,456fb94b856657a26cb36a79600f38a9" />
